# freven-vanilla

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yml
core_experiences/freven.vanilla/: content.manifest  experience.toml
core_experiences/freven.vanilla.visual_validation/: experience.stack.toml
core_experiences/vanilla/: experience.toml
core_experiences/vanilla/mods/freven.vanilla.core/assets/shaders/: voxel.wgsl
crates/freven_vanilla_essentials/: Cargo.toml
crates/freven_vanilla_essentials/src/: action_defaults.rs  action_payloads.rs  blocks.rs  character_controller.rs  humanoid_input.rs  lib.rs  storage_ids.rs
crates/freven_vanilla_essentials/src/actions/: break.rs  mod.rs  place.rs
crates/freven_vanilla_essentials/src/client/: block_interaction.rs  control.rs  mod.rs  nameplates.rs
crates/freven_vanilla_essentials/tests/: visual_reference.rs
docs/: BLOCK_TAGS.md  README.md  VANILLA_VISUAL_CONTENT_PACK_v1.md  VANILLA_VISUAL_REFERENCE.md  VANILLA_VISUAL_VALIDATION_PRESET.md
