[workspace]
resolver = "2"
members = ["crates/freven_vanilla_essentials"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "LicenseRef-FRSL-1.0"
repository = "https://github.com/frevenengine/freven-vanilla"
homepage = "https://github.com/frevenengine/freven-vanilla"
documentation = "https://github.com/frevenengine/freven-vanilla/tree/main/docs"
publish = false

[workspace.dependencies]
freven_mod_api = { path = "../freven-sdk/crates/freven_mod_api" }
freven_world_api = { path = "../freven-sdk/crates/freven_world_api" }
thiserror = "2.0.18"
tracing = "0.1.44"

[patch."https://github.com/frevenengine/freven-sdk"]
freven_mod_api = { path = "../freven-sdk/crates/freven_mod_api" }
freven_world_api = { path = "../freven-sdk/crates/freven_world_api" }
