[workspace]
resolver = "2"
members = ["crates/freven_vanilla_essentials"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "LicenseRef-FRSL-1.0"
repository = "https://github.com/frevenengine/freven-vanilla"
homepage = "https://github.com/frevenengine/freven-vanilla"
documentation = "https://github.com/frevenengine/freven-vanilla/tree/main/docs"
publish = false

[workspace.dependencies]
freven_mod_api = { git = "https://github.com/frevenengine/freven-sdk.git", package = "freven_mod_api" }
freven_world_api = { git = "https://github.com/frevenengine/freven-sdk.git", package = "freven_world_api" }
thiserror = "2.0.18"
tracing = "0.1.44"
