[package]
name = "freven_vanilla_essentials"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
freven_avatar_api.workspace = true
freven_avatar_sdk_types.workspace = true
freven_mod_api.workspace = true
freven_world_api.workspace = true
freven_block_sdk_types.workspace = true
freven_block_api.workspace = true
freven_block_guest.workspace = true
freven_volumetric_sdk_types.workspace = true
thiserror.workspace = true
tracing.workspace = true
